# dde-network-core

./: .clang-format  CMakeLists.txt
.reuse/: dep5
dcc-network/: CMakeLists.txt
dcc-network/operation/: dccnetwork.cpp  dccnetwork.h  netitemmodel.cpp  netitemmodel.h
dcc-network/qml/: DeviceStatusItem.qml  NetButton.qml  NetFileChooseEdit.qml  NetItemEditor.qml  NetPasswordEdit.qml  NetUtils.js  PageAirplane.qml  PageAppProxy.qml  PageDSL.qml  PageDSLSettings.qml  PageDetails.qml  PageHotspot.qml  PageSettings.qml  PageSystemProxy.qml  PageVPN.qml  PageVPNSettings.qml  PageWiredDevice.qml  PageWirelessDevice.qml  SectionDNS.qml  SectionDevice.qml  SectionGeneric.qml  SectionIPv4.qml  SectionIPv6.qml  SectionPPP.qml  SectionPPPOE.qml  SectionSecret.qml  SectionVPN.qml  SystemProxyConfigItem.qml  dcc_network.dci  main.qml  network.qml  networkMain.qml
dcc-network/translations/: network.ts  network_az.ts  network_bo.ts  network_ca.ts  network_de_DE.ts  network_en.ts  network_en_US.ts  network_es.ts  network_fi.ts  network_fr.ts  network_hu.ts  network_it.ts  network_ja.ts  network_lo.ts  network_nb_NO.ts  network_pl.ts  network_pt_BR.ts  network_sq.ts  network_tr.ts  network_uk.ts  network_zh_CN.ts  network_zh_HK.ts  network_zh_TW.ts
dock-example/: CMakeLists.txt  dockpopupwindow.cpp  dockpopupwindow.h  docktestwidget.cpp  docktestwidget.h  main.cpp
dock-network-plugin/: CMakeLists.txt  dockcontentwidget.h  lupdate.sh  network.json  network_v2.json  networkplugin.cpp  networkplugin.h  quickpanel.cpp  quickpanel.h  quickpanelwidget.cpp  quickpanelwidget.h  xdgactivation.cpp  xdgactivation.h
dock-network-plugin/translations/: dock-network-plugin.ts  dock-network-plugin_ar.ts  dock-network-plugin_az.ts  dock-network-plugin_bo.ts  dock-network-plugin_ca.ts  dock-network-plugin_cs.ts  dock-network-plugin_da.ts  dock-network-plugin_de.ts  dock-network-plugin_el.ts  dock-network-plugin_en_AU.ts  dock-network-plugin_en_US.ts  dock-network-plugin_es.ts  dock-network-plugin_fa.ts  dock-network-plugin_fi.ts  dock-network-plugin_fr.ts  dock-network-plugin_gl_ES.ts  dock-network-plugin_hi_IN.ts  dock-network-plugin_hr.ts  dock-network-plugin_hu.ts  dock-network-plugin_it.ts  dock-network-plugin_ja.ts  dock-network-plugin_ko.ts  dock-network-plugin_lo.ts  dock-network-plugin_lt.ts  dock-network-plugin_ms.ts  dock-network-plugin_nl.ts  dock-network-plugin_pl.ts  dock-network-plugin_pt.ts  dock-network-plugin_pt_BR.ts  dock-network-plugin_ro.ts  dock-network-plugin_ru.ts  dock-network-plugin_si.ts  dock-network-plugin_sk.ts  dock-network-plugin_sl.ts  dock-network-plugin_sq.ts  dock-network-plugin_sr.ts  dock-network-plugin_tr.ts  dock-network-plugin_ug.ts  dock-network-plugin_uk.ts  dock-network-plugin_vi.ts  (+3 more)
dock-network-plugin/widget/: jumpsettingbutton.cpp  jumpsettingbutton.h
dss-network-plugin/: CMakeLists.txt  dockpopupwindow.cpp  dockpopupwindow.h  lupdate.sh  network_module.cpp  network_module.h  networkmodule.cpp  networkmodule.h  notificationmanager.cpp  notificationmanager.h
dss-network-plugin/notification/: actionbutton.cpp  appicon.cpp  bubble.cpp  bubble.h  bubblemanager.cpp  bubblemanager.h  bubbletool.cpp  button.cpp  button.h  notificationmanager.cpp  notificationmanager.h
dss-network-plugin/translations/: dss-network-plugin.ts  dss-network-plugin_az.ts  dss-network-plugin_bo.ts  dss-network-plugin_ca.ts  dss-network-plugin_cs.ts  dss-network-plugin_de.ts  dss-network-plugin_el.ts  dss-network-plugin_en_AU.ts  dss-network-plugin_en_US.ts  dss-network-plugin_es.ts  dss-network-plugin_fi.ts  dss-network-plugin_fr.ts  dss-network-plugin_gl_ES.ts  dss-network-plugin_hi_IN.ts  dss-network-plugin_hr.ts  dss-network-plugin_hu.ts  dss-network-plugin_it.ts  dss-network-plugin_ja.ts  dss-network-plugin_ko.ts  dss-network-plugin_lo.ts  dss-network-plugin_lt.ts  dss-network-plugin_ms.ts  dss-network-plugin_nl.ts  dss-network-plugin_pl.ts  dss-network-plugin_pt.ts  dss-network-plugin_pt_BR.ts  dss-network-plugin_ro.ts  dss-network-plugin_ru.ts  dss-network-plugin_si.ts  dss-network-plugin_sl.ts  dss-network-plugin_sq.ts  dss-network-plugin_sr.ts  dss-network-plugin_tr.ts  dss-network-plugin_ug.ts  dss-network-plugin_uk.ts  dss-network-plugin_vi.ts  dss-network-plugin_zh_CN.ts  dss-network-plugin_zh_HK.ts  dss-network-plugin_zh_TW.ts
dss_example/: CMakeLists.txt  dssscreenmanager.cpp  dssscreenmanager.h  dsstestwidget.cpp  dsstestwidget.h  main.cpp  popupwindow.cpp  popupwindow.h
example/: CMakeLists.txt  dccplugintestwidget.cpp  dccplugintestwidget.h  main.cpp  moduledatamodel.cpp  moduledatamodel.h
example/service/: policy.cpp  policy.h  qtdbushook.cpp  qtdbushook.h  servicebase.cpp  servicebase.h  serviceqtdbus.cpp  serviceqtdbus.h
network-service-plugin/: CMakeLists.txt  ipconflicthandler.cpp
network-service-plugin/dde-network-secret-dialog/: CMakeLists.txt  main.cpp  networksecretdialog.cpp
network-service-plugin/session/: browserassist.cpp  sessioncontainer.cpp
network-service-plugin/src/: ipconflicthandler.cpp  ipconflicthandler.h  plugin.cpp  servicefactory.cpp  servicefactory.h
network-service-plugin/system/: connectivitychecker.cpp  networkinitialization.cpp  networkinitialization.h  systemservice.h
network-service-plugin/translations/: network-service-plugin.ts  network-service-plugin_ady.ts  network-service-plugin_af.ts  network-service-plugin_af_ZA.ts  (+97 more)
src/: CMakeLists.txt  configsetting.cpp  configsetting.h  connectivityhandler.cpp  connectivityhandler.h  dccdbusinterface.cpp  dccdbusinterface.h  dccdbusinterface_p.h  dslcontroller.cpp  dslcontroller.h  hotspotcontroller.cpp  hotspotcontroller.h  ipconfilctchecker.cpp  ipconfilctchecker.h  netutils.cpp  netutils.h  networkconst.cpp  networkconst.h  networkcontroller.cpp  networkcontroller.h  networkdbusproxy.cpp  networkdbusproxy.h  networkdetails.cpp  networkdetails.h  networkdevicebase.cpp  networkdevicebase.h  networkinter.h  proxycontroller.cpp  proxycontroller.h  vpncontroller.cpp  vpncontroller.h  wireddevice.cpp  wireddevice.h  wirelessdevice.cpp  wirelessdevice.h
tests/: CMakeLists.txt
(+414 files in other folders)
